--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.6",
     "dom": "^0.0.3",
+    "framer-motion": "^12.11.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.17.0",
     "router-dom": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
