--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "^5.3.6",
     "dom": "^0.0.3",
     "framer-motion": "^12.11.3",
+    "lucide-react": "^0.511.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
     "router-dom": "^3.0.1",
+    "swiper": "^11.2.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
