--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "recoil": "^0.7.7",
     "swiper": "^11.2.8",
