--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -13,11 +13,6 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Decode SSH Key
-        run: |
-          echo "${{ secrets.SERVER_SSH_KEY }}" | base64 -d > key.pem
-          chmod 600 key.pem
-
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
@@ -31,9 +26,16 @@ jobs:
             --build-arg REACT_APP_YOUTUBE_API_KEY=${{ secrets.REACT_APP_YOUTUBE_API_KEY }} \
             -t ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev .
           docker push ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev}
+      
+      - name: Deploy to Dev Server via SSH
+        uses: appleboy/ssh-action@v0.1.5
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} <<EOF
+            docker pull ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev
 
-      - name: Deploy to EC2 
-        run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} <<EOF
-          docker pull ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev
+          
             
