--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -25,7 +25,7 @@ jobs:
             --build-arg REACT_APP_KAKAO_REDIRECT_URL_BACK=${{ secrets.REACT_APP_KAKAO_REDIRECT_URL_BACK_DEV }} \
             --build-arg REACT_APP_YOUTUBE_API_KEY=${{ secrets.REACT_APP_YOUTUBE_API_KEY }} \
             -t ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev .
-          docker push ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev}
+          docker push ${{ secrets.DOCKER_USERNAME }}/cheftoo-frontend:dev
       
       - name: Deploy to Dev Server via SSH
         uses: appleboy/ssh-action@v0.1.5
